Enhance My Portfolio design

--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/eistiaka.png" />
+    <link rel="icon" type="image/svg+xml+png" href="/eistiaka.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml+png"
+      sizes="52x52"
+      href="/eistiak_50.png"
+    />
+    <link rel="icon" type="image/png" sizes="96x96" href="/eistiak_96.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eistiak Ahmed | Portfolio</title>
   </head>
